Add webpack.common and webpack.dev configs
- add utils.js with requireAll function and use it to import all blocks;
- modify room-details__reviews and search-room__results to use
requireAll to import all images;
- modify header and footer blocks to use require for svg files.

--- a/source/blocks/header/header.pug
+++ b/source/blocks/header/header.pug
@@ -24,7 +24,7 @@ mixin header(options)
     div(class=`${blockName}__container`)
       a(class=`${blockName}__logo-link`, href=homeHref)
         img(class=`${blockName}__logo`,
-          src='../../blocks/header/img/header__logo.svg', alt='Toxin Logo')
+          src=require('blocks/header/img/header__logo.svg').default, alt='Toxin Logo')
       button(class=navbarBtnClass, type='button')
         i(class='material-icons') menu
       nav(class=navbarClass)
