Modify webpack.common and webpack.dev configs
- create separate folders for all pages in source;
- fix paths and minor bugs in pages and some blocks;
- add babel-loader and use it along with core-js polyfills
("useBuiltIns": "usage").

--- a/source/blocks/carousel/carousel.pug
+++ b/source/blocks/carousel/carousel.pug
@@ -1,4 +1,4 @@
-mixin carousel({ baseSrc='', imgSrcList=[] })
+mixin carousel({ imgSrcList=[] })
   -
     const blockName = 'carousel';
     const wrapperClass = [blockName, `js-${blockName}`];
@@ -10,7 +10,7 @@ mixin carousel({ baseSrc='', imgSrcList=[] })
   div(class=wrapperClass)
     div(class=`${blockName}__images js-${blockName}__images`)
       each imgSrc, index in imgSrcList
-        img(class=imageClass, src=`${baseSrc}/${imgSrc}`, alt=`Image ${index + 1}`)
+        img(class=imageClass, src=imgSrc, alt=`Image ${index + 1}`)
     button(class=prevBtnClass, type='button')
       i.material-icons expand_more
     button(class=nextBtnClass, type='button')
