--- a/source/blocks/pagination/pagination.scss
+++ b/source/blocks/pagination/pagination.scss
@@ -10,6 +10,10 @@
     margin-bottom: 1.4rem;
   }
 
+  &__buttons-pages {
+    display: inline-block;
+  }
+
   &__button-page {
     display: inline-flex;
     justify-content: center;
