--- a/source/pages/website/_layout.pug
+++ b/source/pages/website/_layout.pug
@@ -31,8 +31,9 @@ html(lang="ru")
             { text: 'Соглашение 2', href: '#mock-address' }
           ] },
         ],
-        fstBtn: { text: 'Войти', href: '#mock-address' },
-        sndBtn: { text: 'Зарегистрироваться', href: '#mock-address' },
+        fstBtn: { text: 'Войти', href: './sign-in.html' },
+        sndBtn: { text: 'Зарегистрироваться', href: './registration.html' },
+        homeHref: './landing-page.html',
       })
 
     block content
@@ -68,4 +69,5 @@ html(lang="ru")
         twitterHref: '#mock-address',
         facebookHref: '#mock-address',
         instagramHref: '#mock-address',
+        homeHref: './landing-page.html',
       })
