--- a/source/pages/website/landing-page/landing-page.pug
+++ b/source/pages/website/landing-page/landing-page.pug
@@ -1,10 +1,10 @@
-extends ./_layout.pug
+extends ../_layout.pug
 
 block append variables
   - const pageTitle = 'Landing Page'
 
 block append mixins
-  include ../../blocks/card-search/card-search.pug
+  include ../../../blocks/card-search/card-search.pug
 
 block content
   main.landing-page
