--- a/source/pages/ui-kit/cards/cards.pug
+++ b/source/pages/ui-kit/cards/cards.pug
@@ -1,15 +1,15 @@
-extends ./_layout.pug
+extends ../_layout.pug
 
 block append variables
   - const pageTitle = 'Cards'
 
 block append mixins
-  include ../../blocks/card-search/card-search.pug
-  include ../../blocks/card-signup/card-signup.pug
-  include ../../blocks/card-book/card-book.pug
-  include ../../blocks/card-signin/card-signin.pug
-  include ../../blocks/card-calendar/card-calendar.pug
-  include ../../blocks/card-room/card-room.pug
+  include ../../../blocks/card-search/card-search.pug
+  include ../../../blocks/card-signup/card-signup.pug
+  include ../../../blocks/card-book/card-book.pug
+  include ../../../blocks/card-signin/card-signin.pug
+  include ../../../blocks/card-calendar/card-calendar.pug
+  include ../../../blocks/card-room/card-room.pug
 
 block content
   .cards.js-cards
@@ -46,12 +46,11 @@ block content
           roomPrice: 9990,
           roomRating: 5,
           roomReviews: 145,
-          crslBaseSrc: '../../blocks/card-room/img',
           crslImgSrcList: [
-            'image_1.png',
-            'image_2.png',
-            'image_3.png',
-            'image_4.png'
+            require('blocks/card-room/img/image_1.png').default,
+            require('blocks/card-room/img/image_2.png').default,
+            require('blocks/card-room/img/image_3.png').default,
+            require('blocks/card-room/img/image_4.png').default,
           ],
         })
       .cards__item.js-cards__card-room
@@ -60,11 +59,10 @@ block content
           roomPrice: 9900,
           roomRating: 4,
           roomReviews: 65,
-          crslBaseSrc: '../../blocks/card-room/img',
           crslImgSrcList: [
-            'image_5.png',
-            'image_5.png',
-            'image_5.png',
-            'image_5.png'
+            require('blocks/card-room/img/image_5.png').default,
+            require('blocks/card-room/img/image_5.png').default,
+            require('blocks/card-room/img/image_5.png').default,
+            require('blocks/card-room/img/image_5.png').default,
           ],
         })
