--- a/source/pages/website/registration/registration.scss
+++ b/source/pages/website/registration/registration.scss
@@ -1,9 +1,9 @@
-@import '../../styles/variables';
+@import '~styles/variables';
 
-.sign-in {
+.registration {
   width: 100%;
-  padding: 16.3rem 1.5rem;
-  background: $color_back url('./img/sign-in__background.png')
+  padding: 3rem 1.5rem 2.6rem;
+  background: $color_back url('./img/registration__background.png')
     bottom/cover no-repeat;
 
   &__container {
