--- a/source/pages/website/search-room/search-room.pug
+++ b/source/pages/website/search-room/search-room.pug
@@ -1,15 +1,15 @@
-extends ./_layout.pug
+extends ../_layout.pug
 
 block append variables
   - const pageTitle = 'Search Room'
 
 block append mixins
-  include ../../blocks/dropdown-date/dropdown-date.pug
-  include ../../blocks/dropdown-list/dropdown-list.pug
-  include ../../blocks/slider-range/slider-range.pug
-  include ../../blocks/list-checkbox/list-checkbox.pug
-  include ../../blocks/card-room/card-room.pug
-  include ../../blocks/pagination/pagination.pug
+  include ../../../blocks/dropdown-date/dropdown-date.pug
+  include ../../../blocks/dropdown-list/dropdown-list.pug
+  include ../../../blocks/slider-range/slider-range.pug
+  include ../../../blocks/list-checkbox/list-checkbox.pug
+  include ../../../blocks/card-room/card-room.pug
+  include ../../../blocks/pagination/pagination.pug
 
 block content
   main.search-room.js-search-room
