--- a/source/pages/website/sign-in/sign-in.scss
+++ b/source/pages/website/sign-in/sign-in.scss
@@ -1,9 +1,9 @@
-@import '../../styles/variables';
+@import '~styles/variables';
 
-.registration {
+.sign-in {
   width: 100%;
-  padding: 3rem 1.5rem 2.6rem;
-  background: $color_back url('./img/registration__background.png')
+  padding: 16.3rem 1.5rem;
+  background: $color_back url('./img/sign-in__background.png')
     bottom/cover no-repeat;
 
   &__container {
