--- a/source/styles/_fonts.scss
+++ b/source/styles/_fonts.scss
@@ -1,5 +1,9 @@
 @import './mixins';
 
+@import '~node_modules/material-icons/iconfont/material-icons.css';
+@import '~node_modules/@fortawesome/fontawesome-free/css/fontawesome.css';
+@import '~node_modules/@fortawesome/fontawesome-free/css/brands.css';
+
 @include fontFace('Montserrat', '../fonts/montserrat-v14-latin_cyrillic/montserrat-v14-latin_cyrillic-regular');
 @include fontFace('Montserrat', '../fonts/montserrat-v14-latin_cyrillic/montserrat-v14-latin_cyrillic-italic', italic, normal);
 @include fontFace('Montserrat', '../fonts/montserrat-v14-latin_cyrillic/montserrat-v14-latin_cyrillic-700', normal, bold);
