Add webpack.prod and modify webpack.common configs
Also use pug-html-loader + html-loader instead of pug-loader (and fix
src paths in some blocks and pages accordingly), since pug-loader
doesn't work well with boolean data-* attributes.

--- a/source/blocks/comment/comment.pug
+++ b/source/blocks/comment/comment.pug
@@ -18,7 +18,7 @@ mixin comment(options)
       img(
         class=`${blockName}__picture js-${blockName}__picture`,
         alt='Profile picture',
-        src=require(`blocks/comment/img/${userPicture}`).default
+        src=`~blocks/comment/img/${userPicture}`
       )
       span(class=`${blockName}__like js-${blockName}__like`)
         +button-like({ likeCount: likeCount, active: likeActive })
