--- a/source/pages/ui-kit/cards/cards.pug
+++ b/source/pages/ui-kit/cards/cards.pug
@@ -47,10 +47,10 @@ block content
           roomRating: 5,
           roomReviews: 145,
           crslImgSrcList: [
-            require('blocks/card-room/img/image_1.png').default,
-            require('blocks/card-room/img/image_2.png').default,
-            require('blocks/card-room/img/image_3.png').default,
-            require('blocks/card-room/img/image_4.png').default,
+            '~blocks/card-room/img/image_1.png',
+            '~blocks/card-room/img/image_2.png',
+            '~blocks/card-room/img/image_3.png',
+            '~blocks/card-room/img/image_4.png',
           ],
         })
       .cards__item.js-cards__card-room
@@ -60,9 +60,9 @@ block content
           roomRating: 4,
           roomReviews: 65,
           crslImgSrcList: [
-            require('blocks/card-room/img/image_5.png').default,
-            require('blocks/card-room/img/image_5.png').default,
-            require('blocks/card-room/img/image_5.png').default,
-            require('blocks/card-room/img/image_5.png').default,
+            '~blocks/card-room/img/image_5.png',
+            '~blocks/card-room/img/image_5.png',
+            '~blocks/card-room/img/image_5.png',
+            '~blocks/card-room/img/image_5.png',
           ],
         })
