--- a/source/pages/website/_layout.pug
+++ b/source/pages/website/_layout.pug
@@ -11,6 +11,9 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
+    meta(name="description" content="The first practical task for FSD Frontend education program")
+    meta(name="keywords" content="FSD, Frontend")
+    meta(name="author" content="Aleinbanger")
 
     link(rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png")
     link(rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png")
