Refactor the project and update README
* refactor package.json;
* improve webpack config and fix paths;
* improve eslint config and fix errors.

--- a/source/pages/ui-kit/_layout.pug
+++ b/source/pages/ui-kit/_layout.pug
@@ -9,8 +9,8 @@ html(lang="en")
     meta(charset="UTF-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
-    meta(name="description" content="The first practical task for FSD Frontend education program")
-    meta(name="keywords" content="FSD, Frontend")
+    meta(name="description" content="The first practical task for MetaLamp Frontend education program")
+    meta(name="keywords" content="MetaLamp, Frontend")
     meta(name="author" content="Aleinbanger")
 
     link(rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png")
