--- a/source/pages/website/landing-page/landing-page.pug
+++ b/source/pages/website/landing-page/landing-page.pug
@@ -4,7 +4,7 @@ block append variables
   - const pageTitle = 'Landing Page'
 
 block append mixins
-  include ../../../blocks/card-search/card-search.pug
+  include /blocks/card-search/card-search.pug
 
 block content
   main.landing-page
