--- a/source/pages/website/registration/registration.pug
+++ b/source/pages/website/registration/registration.pug
@@ -4,7 +4,7 @@ block append variables
   - const pageTitle = 'Registration'
 
 block append mixins
-  include ../../../blocks/card-signup/card-signup.pug
+  include /blocks/card-signup/card-signup.pug
 
 block content
   main.registration
