--- a/source/pages/website/room-details/room-details.pug
+++ b/source/pages/website/room-details/room-details.pug
@@ -5,11 +5,11 @@ block append variables
   - const roomImgSrcList = ['./img/888_1.png', './img/888_2.png', './img/888_3.png']
 
 block append mixins
-  include ../../../blocks/list-feature/list-feature.pug
-  include ../../../blocks/chart-circle/chart-circle.pug
-  include ../../../blocks/card-book/card-book.pug
-  include ../../../blocks/comment/comment.pug
-  include ../../../blocks/list-bullet/list-bullet.pug
+  include /blocks/list-feature/list-feature.pug
+  include /blocks/chart-circle/chart-circle.pug
+  include /blocks/card-book/card-book.pug
+  include /blocks/comment/comment.pug
+  include /blocks/list-bullet/list-bullet.pug
 
 block content
   main.room-details.js-room-details
