--- a/source/pages/ui-kit/cards/cards.pug
+++ b/source/pages/ui-kit/cards/cards.pug
@@ -4,12 +4,12 @@ block append variables
   - const pageTitle = 'Cards'
 
 block append mixins
-  include ../../../blocks/card-search/card-search.pug
-  include ../../../blocks/card-signup/card-signup.pug
-  include ../../../blocks/card-book/card-book.pug
-  include ../../../blocks/card-signin/card-signin.pug
-  include ../../../blocks/card-calendar/card-calendar.pug
-  include ../../../blocks/card-room/card-room.pug
+  include /blocks/card-search/card-search.pug
+  include /blocks/card-signup/card-signup.pug
+  include /blocks/card-book/card-book.pug
+  include /blocks/card-signin/card-signin.pug
+  include /blocks/card-calendar/card-calendar.pug
+  include /blocks/card-room/card-room.pug
 
 block content
   .cards.js-cards
