--- a/source/pages/ui-kit/headers-footers/headers-footers.pug
+++ b/source/pages/ui-kit/headers-footers/headers-footers.pug
@@ -4,8 +4,8 @@ block append variables
   - const pageTitle = 'Headers & Footers'
 
 block append mixins
-  include ../../../blocks/header/header.pug
-  include ../../../blocks/footer/footer.pug
+  include /blocks/header/header.pug
+  include /blocks/footer/footer.pug
 
 block content
   .headers-footers
