--- a/source/pages/website/sign-in/sign-in.pug
+++ b/source/pages/website/sign-in/sign-in.pug
@@ -4,7 +4,7 @@ block append variables
   - const pageTitle = 'Sign In'
 
 block append mixins
-  include ../../../blocks/card-signin/card-signin.pug
+  include /blocks/card-signin/card-signin.pug
 
 block content
   main.sign-in
