--- a/source/styles/_mixins.scss
+++ b/source/styles/_mixins.scss
@@ -1,4 +1,4 @@
-@mixin fontFace($family, $src, $style: normal, $weight: normal) {
+@mixin font-face($family, $src, $style: normal, $weight: normal) {
   @font-face {
     font-family: $family;
     src: url('#{$src}.eot'); // IE9 Compat Modes
