Improve list-bullet block and add Index page

--- a/source/blocks/list-bullet/list-bullet.pug
+++ b/source/blocks/list-bullet/list-bullet.pug
@@ -5,4 +5,4 @@ mixin list-bullet({ listItems=[] })
 
   ul(class=wrapperClass)
     each item in listItems
-      li(class=`${blockName}__item`) #{item}
+      li(class=`${blockName}__item`) !{item}
