--- a/source/styles/_variables.scss
+++ b/source/styles/_variables.scss
@@ -1,5 +1,5 @@
-$font-family_h1: 'Quicksand', 'Open Sans', sans-serif;
-$font-family_h2: 'Quicksand', 'Open Sans', sans-serif;
+$font-family_h1: 'Montserrat', 'Open Sans', sans-serif;
+$font-family_h2: 'Montserrat', 'Open Sans', sans-serif;
 $font-family_h3: 'Montserrat', 'Open Sans', sans-serif;
 $font-family_body: 'Montserrat', 'Open Sans', sans-serif;
 
