--- a/source/pages/website/landing-page/landing-page.scss
+++ b/source/pages/website/landing-page/landing-page.scss
@@ -3,6 +3,7 @@
 .landing-page {
   width: 100%;
   height: 100%;
+  max-height: 83rem;
   padding: 7rem 1.5rem 2rem;
   background: $color_back url('./img/landing-page__background.png')
     bottom/cover no-repeat;
