--- a/source/pages/website/registration/registration.scss
+++ b/source/pages/website/registration/registration.scss
@@ -2,7 +2,7 @@
 
 .registration {
   width: 100%;
-  padding: 3rem 1.5rem 2.6rem;
+  padding: 1.9rem 1.5rem;
   background: $color_back url('./img/registration__background.png')
     bottom/cover no-repeat;
 
