--- a/source/pages/website/sign-in/sign-in.scss
+++ b/source/pages/website/sign-in/sign-in.scss
@@ -2,7 +2,7 @@
 
 .sign-in {
   width: 100%;
-  padding: 16.3rem 1.5rem;
+  padding: 17.1rem 1.5rem 17.3rem;
   background: $color_back url('./img/sign-in__background.png')
     bottom/cover no-repeat;
 
